# Serial-port-reader

./: CMakeLists.txt
src/: Serial.cpp  Serial.h  main.cpp
